thx2_results/results/mt/sycl.log
~/repos/llvm/build/bin/clang++ -std=c++17 -Wall -fsycl --gcc-toolchain=/home/ga27mex2/spack_thx2/spack/opt/spack/linux-centos8-thunderx2/gcc-14.1.0/gcc-14.1.0-kl6fnbyj4mhv4v5emwvqi6nmxb4kvjae -fsycl-targets=nvptx64-nvidia-cuda -Xsycl-target-backend --cuda-gpu-arch=sm_70 -DUSE_GPU -DUSE_GPU -DUSE_GPU -DUSE_GPU -O3 -O3 -O3 -O3 -c genmtrand.cpp -o genmtrand.o
~/repos/llvm/build/bin/clang++ -std=c++17 -Wall -fsycl --gcc-toolchain=/home/ga27mex2/spack_thx2/spack/opt/spack/linux-centos8-thunderx2/gcc-14.1.0/gcc-14.1.0-kl6fnbyj4mhv4v5emwvqi6nmxb4kvjae -fsycl-targets=nvptx64-nvidia-cuda -Xsycl-target-backend --cuda-gpu-arch=sm_70 -DUSE_GPU -DUSE_GPU -DUSE_GPU -DUSE_GPU -O3 -O3 -O3 -O3 -c MT.cpp -o MT.o
MT.cpp:205:27: error: no member named 'fabs' in namespace 'std'
  205 |       double delta = std::fabs(rCPU - rGPU);
      |                      ~~~~~^
MT.cpp:207:25: error: no member named 'fabs' in namespace 'std'
  207 |       sum_ref   += std::fabs(rCPU);
      |                    ~~~~~^
2 errors generated.
make: *** [Makefile:71: MT.o] Error 1
